<?xml version="1.0"?>
<package format="2">
  <name>za_moveit_planning</name>
  <version>0.1.0</version>
  <description>MoveIt launch tools and planning examples for the za6 robot</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
</package>
